[gd_scene load_steps=2 format=3 uid="uid://hud_scene"]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_hud"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 320.0
offset_bottom = 120.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(280, 28)
layout_mode = 2
theme_override_styles/fill = null
max_value = 100.0
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="MarginContainer/VBoxContainer/HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "100 / 100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StaminaBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(280, 20)
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false

[node name="StaminaLabel" type="Label" parent="MarginContainer/VBoxContainer/StaminaBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "100 / 100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeContainer" type="VBoxContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -150.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 80.0
grow_horizontal = 0
alignment = 1

[node name="TimeLabel" type="Label" parent="TimeContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "12:00"
horizontal_alignment = 2

[node name="DayLabel" type="Label" parent="TimeContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Day 1"
horizontal_alignment = 2

[node name="LevelContainer" type="HBoxContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -60.0
offset_right = 200.0
offset_bottom = -20.0
grow_vertical = 0
theme_override_constants/separation = 10

[node name="LevelLabel" type="Label" parent="LevelContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Lv. 1"

[node name="ExpBar" type="ProgressBar" parent="LevelContainer"]
custom_minimum_size = Vector2(120, 20)
layout_mode = 2
size_flags_vertical = 1
max_value = 100.0
value = 0.0
show_percentage = false

[node name="InteractionHint" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 18
text = "[E] Interact"
horizontal_alignment = 1
