## HUD - –ò–Ω—Ç–µ—Ä—Ñ–µ–π—Å –∏–≥—Ä–æ–∫–∞ ASHBOUND
## –û—Ç–æ–±—Ä–∞–∂–∞–µ—Ç –∑–¥–æ—Ä–æ–≤—å–µ, —Å—Ç–∞–º–∏–Ω—É, –≤—Ä–µ–º—è —Å—É—Ç–æ–∫, –ø–æ–¥—Å–∫–∞–∑–∫–∏ –≤–∑–∞–∏–º–æ–¥–µ–π—Å—Ç–≤–∏—è
class_name HUD
extends CanvasLayer

# –°—Å—ã–ª–∫–∏ –Ω–∞ —ç–ª–µ–º–µ–Ω—Ç—ã UI
@onready var health_bar: ProgressBar = $MarginContainer/VBoxContainer/HealthBar
@onready var health_label: Label = $MarginContainer/VBoxContainer/HealthBar/HealthLabel
@onready var stamina_bar: ProgressBar = $MarginContainer/VBoxContainer/StaminaBar
@onready var stamina_label: Label = $MarginContainer/VBoxContainer/StaminaBar/StaminaLabel

@onready var time_label: Label = $TimeContainer/TimeLabel
@onready var day_label: Label = $TimeContainer/DayLabel

@onready var interaction_hint: Label = $InteractionHint
@onready var level_label: Label = $LevelContainer/LevelLabel
@onready var exp_bar: ProgressBar = $LevelContainer/ExpBar

# –¶–≤–µ—Ç–∞ –¥–ª—è –≤—Ä–µ–º–µ–Ω–∏ —Å—É—Ç–æ–∫
var time_colors = {
	"morning": Color(1.0, 0.9, 0.6),
	"afternoon": Color(1.0, 1.0, 0.9),
	"evening": Color(1.0, 0.6, 0.4),
	"night": Color(0.6, 0.7, 1.0)
}


func _ready() -> void:
	# –°–∫—Ä—ã–≤–∞–µ–º –ø–æ–¥—Å–∫–∞–∑–∫—É –≤–∑–∞–∏–º–æ–¥–µ–π—Å—Ç–≤–∏—è
	interaction_hint.visible = false

	# –ü–æ–¥–∫–ª—é—á–∞–µ–º—Å—è –∫ —Å–∏–≥–Ω–∞–ª–∞–º –∏–≥—Ä–æ–∫–∞
	_connect_player_signals()

	# –ü–æ–¥–∫–ª—é—á–∞–µ–º—Å—è –∫ GameManager –¥–ª—è –≤—Ä–µ–º–µ–Ω–∏
	GameManager.hour_changed.connect(_on_hour_changed)

	# –û–±–Ω–æ–≤–ª—è–µ–º –≤—Ä–µ–º—è —Å—Ä–∞–∑—É
	_update_time_display()


func _connect_player_signals() -> void:
	# –ñ–¥—ë–º –ø–æ–∫–∞ –∏–≥—Ä–æ–∫ –±—É–¥–µ—Ç –¥–æ—Å—Ç—É–ø–µ–Ω
	await get_tree().process_frame

	var player = GameManager.player
	if player:
		player.health_changed.connect(_on_health_changed)
		player.stamina_changed.connect(_on_stamina_changed)
		player.interaction_available.connect(_on_interaction_available)
		player.interaction_unavailable.connect(_on_interaction_unavailable)
		player.experience_gained.connect(_on_experience_gained)
		player.level_up.connect(_on_level_up)

		# –ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∞—Ü–∏—è –Ω–∞—á–∞–ª—å–Ω—ã—Ö –∑–Ω–∞—á–µ–Ω–∏–π
		_on_health_changed(player.current_health, player.max_health)
		_on_stamina_changed(player.current_stamina, player.max_stamina)
		_update_level_display(player.level, player.experience, player.experience_to_next)


func _on_health_changed(current: int, maximum: int) -> void:
	health_bar.max_value = maximum
	health_bar.value = current
	health_label.text = "%d / %d" % [current, maximum]

	# –ú–µ–Ω—è–µ–º —Ü–≤–µ—Ç –ø—Ä–∏ –Ω–∏–∑–∫–æ–º –∑–¥–æ—Ä–æ–≤—å–µ
	if current < maximum * 0.25:
		health_bar.modulate = Color(1.0, 0.3, 0.3)
	elif current < maximum * 0.5:
		health_bar.modulate = Color(1.0, 0.7, 0.3)
	else:
		health_bar.modulate = Color.WHITE


func _on_stamina_changed(current: float, maximum: float) -> void:
	stamina_bar.max_value = maximum
	stamina_bar.value = current
	stamina_label.text = "%d / %d" % [int(current), int(maximum)]

	# –ú–µ–Ω—è–µ–º —Ü–≤–µ—Ç –ø—Ä–∏ –Ω–∏–∑–∫–æ–π —Å—Ç–∞–º–∏–Ω–µ
	if current < maximum * 0.2:
		stamina_bar.modulate = Color(0.7, 0.7, 0.7)
	else:
		stamina_bar.modulate = Color.WHITE


func _on_interaction_available(target: Node) -> void:
	if target.has_method("get_interaction_text"):
		interaction_hint.text = "[E] " + target.get_interaction_text()
	else:
		interaction_hint.text = "[E] –í–∑–∞–∏–º–æ–¥–µ–π—Å—Ç–≤–æ–≤–∞—Ç—å"
	interaction_hint.visible = true


func _on_interaction_unavailable() -> void:
	interaction_hint.visible = false


func _on_hour_changed(new_hour: int) -> void:
	_update_time_display()


func _update_time_display() -> void:
	var hour = GameManager.current_hour
	var minute = int(GameManager.current_minute)
	var day = GameManager.current_day
	var period = GameManager.get_time_period()

	# –§–æ—Ä–º–∞—Ç –≤—Ä–µ–º–µ–Ω–∏
	time_label.text = "%02d:%02d" % [hour, minute]
	day_label.text = "–î–µ–Ω—å %d" % day

	# –¶–≤–µ—Ç –ø–æ –≤—Ä–µ–º–µ–Ω–∏ —Å—É—Ç–æ–∫
	time_label.modulate = time_colors.get(period, Color.WHITE)

	# –ò–∫–æ–Ω–∫–∞ –≤—Ä–µ–º–µ–Ω–∏ —Å—É—Ç–æ–∫
	match period:
		"morning":
			time_label.text = "‚òÄ " + time_label.text
		"afternoon":
			time_label.text = "‚òÄ " + time_label.text
		"evening":
			time_label.text = "üåÖ " + time_label.text
		"night":
			time_label.text = "üåô " + time_label.text


func _on_experience_gained(amount: int) -> void:
	var player = GameManager.player
	if player:
		_update_level_display(player.level, player.experience, player.experience_to_next)

		# –ü–æ–∫–∞–∑—ã–≤–∞–µ–º —Ç–µ–∫—Å—Ç +XP (–º–æ–∂–Ω–æ –¥–æ–±–∞–≤–∏—Ç—å –∞–Ω–∏–º–∞—Ü–∏—é)
		_show_xp_popup(amount)


func _on_level_up(new_level: int) -> void:
	var player = GameManager.player
	if player:
		_update_level_display(new_level, player.experience, player.experience_to_next)

		# TODO: –ü–æ–∫–∞–∑–∞—Ç—å —ç—Ñ—Ñ–µ–∫—Ç –ø–æ–≤—ã—à–µ–Ω–∏—è —É—Ä–æ–≤–Ω—è
		print("[HUD] –£—Ä–æ–≤–µ–Ω—å –ø–æ–≤—ã—à–µ–Ω –¥–æ %d!" % new_level)


func _update_level_display(level: int, exp: int, exp_next: int) -> void:
	level_label.text = "–£—Ä. %d" % level
	exp_bar.max_value = exp_next
	exp_bar.value = exp


func _show_xp_popup(amount: int) -> void:
	# –ü—Ä–æ—Å—Ç–æ–π popup –¥–ª—è XP (–º–æ–∂–Ω–æ —É–ª—É—á—à–∏—Ç—å –∞–Ω–∏–º–∞—Ü–∏–µ–π)
	var popup = Label.new()
	popup.text = "+%d XP" % amount
	popup.add_theme_color_override("font_color", Color(1.0, 0.85, 0.3))
	popup.position = Vector2(get_viewport().size.x / 2 - 50, get_viewport().size.y / 2)
	add_child(popup)

	# –ê–Ω–∏–º–∞—Ü–∏—è –∏—Å—á–µ–∑–Ω–æ–≤–µ–Ω–∏—è
	var tween = create_tween()
	tween.tween_property(popup, "position:y", popup.position.y - 50, 1.0)
	tween.parallel().tween_property(popup, "modulate:a", 0.0, 1.0)
	tween.tween_callback(popup.queue_free)
